feat: linux provider basic auth

--- a/docker-nginx.conf
+++ b/docker-nginx.conf
@@ -20,8 +20,8 @@ http {
         server_name             localhost;
         client_max_body_size    32m;
 
-        # auth_basic              “user”;
-        # auth_basic_user_file    /etc/nginx/.htpasswd;
+        # auth_basic              "basic";
+        # auth_basic_user_file    /run/secrets/BASIC_AUTH_HTPASSWD;
 
         location /graphql {
             proxy_pass http://server-template-graphql:8080;
