--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -52,8 +52,8 @@ services:
       COMMON_PROJECT: server-template
       # NOTE: Database connection is for tests only
       DATABASE_HOST: server-template-database
-      DATABASE_NAME: server_template_local
-      DATABASE_USER: server_template_local_app
+      DATABASE_NAME: ${db_database_name}
+      DATABASE_USER: ${db_database_app_username}
 
   server-template-graphql:
     container_name: server-template-graphql
@@ -116,8 +116,8 @@ services:
       KAFKA_HOST: server-template-kafka
       KAFKA_PORT: 9092
       DATABASE_HOST: server-template-database
-      DATABASE_NAME: server_template_local
-      DATABASE_USER: server_template_local_app
+      DATABASE_NAME: ${db_database_name}
+      DATABASE_USER: ${db_database_app_username}
       DATABASE_POOL_MIN: '1'
       DATABASE_POOL_MAX: '10'
       S3_URL: http://server-template-storage:9000/
@@ -182,8 +182,8 @@ services:
     secrets:
       - DATABASE_PASSWORD
     environment:
-      POSTGRES_DB: server_template_local
-      POSTGRES_USER: server_template_local_app
+      POSTGRES_DB: ${db_database_name}
+      POSTGRES_USER: ${db_database_app_username}
       POSTGRES_PASSWORD_FILE: /run/secrets/DATABASE_PASSWORD
     volumes:
       - "./database:/docker-entrypoint-initdb.d:delegated"
@@ -208,7 +208,7 @@ services:
 
 secrets:
   DATABASE_PASSWORD:
-    file: ./secrets/${taito_env}/${db_database_name}-db-app.password
+    file: ./secrets/${taito_env}/${db_database_app_secret}
   S3_KEY_SECRET:
     file: ./secrets/${taito_env}/${taito_project}-${taito_env}-storage-gateway.secret
   EXAMPLE_SECRET:
