fix: local ci improvements

--- a/docker-compose-test.yaml
+++ b/docker-compose-test.yaml
@@ -75,7 +75,7 @@ services:
   # Taito CLI container serves as a database proxy
   server-template-database-test-proxy:
     container_name: server-template-database-test-proxy
-    image: taitounited/taito-cli:latest
+    image: ${taito_image:-taitounited/taito-cli:latest}
     restart: unless-stopped
     entrypoint: /bin/sh -c "cd /project && taito db-proxy:${taito_env} 5432"
     user: taito
