chore: add health checks TODO

--- a/docker-compose-remote.yaml
+++ b/docker-compose-remote.yaml
@@ -1,5 +1,6 @@
 # This file is used for running Docker Compose on remote servers. It is not
 # needed if you use Kubernetes instead.
+# TODO: health checks
 
 version: '3.5'
 services:
