--- a/scripts/helm.yaml
+++ b/scripts/helm.yaml
@@ -1,6 +1,7 @@
 global:
   domain: ${taito_domain}
   url: https://${taito_domain}
+  publicPort: 443
   logFormat: stackdriver
   logLevel: info    # trace, debug, info, warn, error, fatal
   registry: ${taito_container_registry}
