--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "install-all:www": "cd www && npm install",
     "taito-init": "taito -z init:${taito_env} && npm run import-db-data",
     "taito-init:clean": "taito -z init:${taito_env} --clean && npm run import-db-data && npm run clean:storage",
-    "import-db-data": "if [ -f ./database/data/${taito_env}.sql ]; then taito db-import:${taito_env} ./database/data/${taito_env}.sql; fi",
+    "import-db-data": "if [ -f ./database/data/${taito_env}.sql ]; then taito db import:${taito_env} ./database/data/${taito_env}.sql; fi",
     "clean:storage": "if [ ${taito_env} = 'local' ] && [ -d storage ]; then echo Cleaning storage; rm -rf ./storage/bucket/*; rm -rf ./storage/.minio.sys/buckets/bucket/*/; fi",
     "db-deploy": "npm run generate-db-classes",
     "generate-db-classes": "if [ ${taito_env} = 'local' ] && [ -f ./server/generate ]; then taito exec:server ./generate; fi",
@@ -34,12 +34,12 @@
     "unit:worker": "cd worker && npm run unit",
     "unit:www": "cd www && npm run unit",
     "test": "npm-run-all test:admin test:client test:graphql test:server test:worker test:www ",
-    "test:admin": "taito util-test:admin:${taito_env}",
-    "test:client": "taito util-test:client:${taito_env}",
-    "test:graphql": "taito util-test:graphql:${taito_env}",
-    "test:server": "taito util-test:server:${taito_env}",
-    "test:worker": "echo DISABLED taito util-test:worker:${taito_env}",
-    "test:www": "echo DISABLED taito util-test:www:${taito_env}",
+    "test:admin": "taito util test:admin:${taito_env}",
+    "test:client": "taito util test:client:${taito_env}",
+    "test:graphql": "taito util test:graphql:${taito_env}",
+    "test:server": "taito util test:server:${taito_env}",
+    "test:worker": "echo DISABLED taito util test:worker:${taito_env}",
+    "test:www": "echo DISABLED taito util test:www:${taito_env}",
     "taito-host-cypress": "npm run taito-host-cypress:client",
     "taito-host-cypress:client": "cd client && DATABASE_PASSWORD=$test_all_DATABASE_PASSWORD npm run cypress:open",
     "taito-host-cypress:admin": "cd admin && DATABASE_PASSWORD=$test_all_DATABASE_PASSWORD npm run cypress:open",
