--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -2,6 +2,7 @@
 # NOTE: npm libraries are installed inside container to speed up build
 FROM node:10-alpine
 ARG SERVICE_DIR=.
+RUN apk add --update-cache rsync # rsync for windows devs
 WORKDIR /service
 ENV NODE_ENV development
 COPY ${SERVICE_DIR}/package.json \
@@ -9,4 +10,4 @@ COPY ${SERVICE_DIR}/package.json \
   /service/
 RUN npm install --loglevel warn
 EXPOSE 8080
-CMD npm install; npm run start
+CMD eval $DC_COMMAND; npm install; npm run start
