--- a/www/Dockerfile.webhook
+++ b/www/Dockerfile.webhook
@@ -8,6 +8,9 @@ LABEL version=${BUILD_VERSION} \
 RUN apt-get -y update && \
     apt-get -y install git webhook
 
+# https://github.com/gatsbyjs/gatsby/issues/11406#issuecomment-485278936
+RUN echo fs.inotify.max_user_watches=524288 | tee -a /etc/sysctl.conf
+
 WORKDIR /service
 COPY ${SERVICE_DIR}/*.sh \
      ${SERVICE_DIR}/*.json \
