--- a/www/Dockerfile.build
+++ b/www/Dockerfile.build
@@ -10,8 +10,10 @@ ENV BUILD_VERSION ${BUILD_VERSION}
 ENV NODE_ENV development
 ENV APP_SENTRY_PUBLIC_DSN #sentryPublicDSN
 
-RUN mkdir /service && chown node:node /service
+# https://github.com/gatsbyjs/gatsby/issues/11406#issuecomment-485278936
+RUN echo fs.inotify.max_user_watches=524288 | tee -a /etc/sysctl.conf
 
+RUN mkdir /service && chown node:node /service
 WORKDIR /service
 COPY ${SERVICE_DIR}/*.sh \
      ${SERVICE_DIR}/package* \
