--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
     "install-all:server": "cd server && npm install",
     "install-all:worker": "cd worker && npm install",
     "install-all:www": "cd www && npm install",
-    "taito-init": "taito -z init:${taito_env} && npm run import-db-data",
-    "taito-init:clean": "taito -z init:${taito_env} --clean && npm run import-db-data && npm run clean:storage",
-    "import-db-data": "if [ -f ./database/data/${taito_env}.sql ]; then taito db import:${taito_env} ./database/data/${taito_env}.sql; fi",
+    "taito-init": "taito -z ${taito_options} init:${taito_env} && npm run import-db-data",
+    "taito-init:clean": "taito -z ${taito_options} init:${taito_env} --clean && npm run import-db-data && npm run clean:storage",
+    "import-db-data": "if [ -f ./database/data/${taito_env}.sql ]; then taito ${taito_options} db import:${taito_env} ./database/data/${taito_env}.sql; fi",
     "clean:storage": "if [ ${taito_env} = 'local' ] && [ -d storage ]; then echo Cleaning storage; rm -rf ./storage/bucket/*; rm -rf ./storage/.minio.sys/buckets/bucket/*/; fi",
     "db-deploy": "npm run generate-db-classes",
-    "generate-db-classes": "if [ ${taito_env} = 'local' ] && [ -f ./server/generate ]; then taito exec:server ./generate; fi",
-    "info:local": "yes | taito secrets:${taito_env}",
-    "info": "yes | taito secrets:${taito_env} | grep :\\{PLAIN\\} | sed -e 's|{PLAIN}| |'",
+    "generate-db-classes": "if [ ${taito_env} = 'local' ] && [ -f ./server/generate ]; then taito ${taito_options} exec:server ./generate; fi",
+    "info:local": "yes | taito ${taito_options} secrets:${taito_env}",
+    "info": "yes | taito ${taito_options} secrets:${taito_env} | grep :\\{PLAIN\\} | sed -e 's|{PLAIN}| |'",
     "info_todo_comment": "TODO autoconfirm on taito secrets:prod",
     "lint": "echo Running lint locally && npm-run-all --parallel lint:admin lint:client lint:graphql lint:server lint:worker lint:www ",
     "lint:admin": "cd admin && npm run lint",
@@ -34,12 +34,12 @@
     "unit:worker": "cd worker && npm run unit",
     "unit:www": "cd www && npm run unit",
     "test": "npm-run-all test:admin test:client test:graphql test:server test:worker test:www ",
-    "test:admin": "taito util test:admin:${taito_env}",
-    "test:client": "taito util test:client:${taito_env}",
-    "test:graphql": "taito util test:graphql:${taito_env}",
-    "test:server": "taito util test:server:${taito_env}",
-    "test:worker": "echo DISABLED taito util test:worker:${taito_env}",
-    "test:www": "echo DISABLED taito util test:www:${taito_env}",
+    "test:admin": "taito ${taito_options} util test:admin:${taito_env}",
+    "test:client": "taito ${taito_options} util test:client:${taito_env}",
+    "test:graphql": "taito ${taito_options} util test:graphql:${taito_env}",
+    "test:server": "taito ${taito_options} util test:server:${taito_env}",
+    "test:worker": "echo DISABLED taito ${taito_options} util test:worker:${taito_env}",
+    "test:www": "echo DISABLED taito ${taito_options} util test:www:${taito_env}",
     "taito-host-cypress": "npm run taito-host-cypress:client",
     "taito-host-cypress:client": "cd client && DATABASE_PASSWORD=$test_all_DATABASE_PASSWORD npm run cypress:open",
     "taito-host-cypress:admin": "cd admin && DATABASE_PASSWORD=$test_all_DATABASE_PASSWORD npm run cypress:open",
