fix: hugo setup

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -159,7 +159,7 @@ services:
     volumes:
       - "./www:${DC_PATH}/service:delegated"
       - "${DC_PATH}/service/node_modules"
-      - "${DC_PATH}/service/site/node_modules"
+      - "${DC_PATH}/service/site/node_modules" # FOR GATSBY ONLY
       # FOR GATSBY ONLY:
       # - "/service/site/node_modules"
     environment:
