--- a/www/Dockerfile.webhook
+++ b/www/Dockerfile.webhook
@@ -3,13 +3,10 @@ ARG SERVICE_DIR=.
 ARG BUILD_VERSION
 LABEL version=${BUILD_VERSION} \
       company=companyname \
-      project=website-template \
+      project=server-template \
       role=webhook
 RUN apt-get -y update && \
     apt-get -y install git webhook
-
-# https://github.com/gatsbyjs/gatsby/issues/11406#issuecomment-485278936
-RUN echo fs.inotify.max_user_watches=524288 | tee -a /etc/sysctl.conf
 
 WORKDIR /service
 COPY ${SERVICE_DIR}/*.sh \
