fix: fixed mac server reload
Added --poll switch to ts-node-dev command on server when running
starting project on mac.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -122,6 +122,7 @@ services:
       - EXAMPLE_SECRET
     environment:
       DC_COMMAND: ${DC_COMMAND}
+      HOIST_UNAME: ${taito_host_uname}
       COMMON_COMPANY: companyname
       COMMON_PROJECT: server-template
       COMMON_PUBLIC_PORT: 9999
