--- a/client/package.json
+++ b/client/package.json
@@ -17,92 +17,92 @@
     "lang:compile": "lingui compile"
   },
   "dependencies": {
-    "@babel/polyfill": "7.4.3",
-    "@lingui/react": "2.7.4",
-    "@material-ui/core": "3.9.3",
-    "@material-ui/icons": "3.0.2",
-    "@sentry/browser": "5.1.0",
+    "@babel/polyfill": "^7.4.4",
+    "@lingui/react": "^2.8.3",
+    "@material-ui/core": "^4.1.1",
+    "@material-ui/icons": "^4.2.0",
+    "@sentry/browser": "^5.4.0",
     "@types/lingui__core": "2.7.0",
     "@types/lingui__macro": "2.7.3",
     "@types/lingui__react": "2.5.2",
-    "@types/react": "16.8.14",
+    "@types/react": "^16.8.20",
     "@types/react-dom": "16.8.4",
-    "@types/react-redux": "7.0.8",
-    "@types/react-router-dom": "4.3.2",
-    "@types/redux-actions": "2.6.0",
+    "@types/react-redux": "^7.1.0",
+    "@types/react-router-dom": "^4.3.4",
+    "@types/redux-actions": "^2.6.1",
     "@types/redux-logger": "3.0.7",
-    "@types/styled-components": "4.1.14",
+    "@types/styled-components": "^4.1.16",
     "axios": "0.19.0",
     "connected-react-router": "6.4.0",
-    "core-js": "3.0.1",
+    "core-js": "^3.1.3",
     "history": "4.9.0",
-    "query-string": "6.4.2",
+    "query-string": "^6.7.0",
     "react": "16.8.6",
     "react-dom": "16.8.6",
-    "react-hot-loader": "4.8.4",
-    "react-redux": "7.0.2",
-    "react-router-dom": "5.0.0",
+    "react-hot-loader": "^4.11.0",
+    "react-redux": "^7.1.0",
+    "react-router-dom": "^5.0.1",
     "redux": "4.0.1",
     "redux-actions": "2.6.5",
     "redux-logger": "3.0.6",
-    "redux-saga": "1.0.2",
-    "styled-components": "4.2.0",
-    "workbox-window": "4.3.0"
+    "redux-saga": "^1.0.3",
+    "styled-components": "^4.3.1",
+    "workbox-window": "^4.3.1"
   },
   "devDependencies": {
-    "@babel/cli": "7.4.3",
-    "@babel/core": "7.4.3",
-    "@babel/plugin-proposal-class-properties": "7.4.0",
-    "@babel/plugin-proposal-object-rest-spread": "7.4.3",
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.5",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
     "@babel/plugin-syntax-dynamic-import": "7.2.0",
-    "@babel/preset-env": "7.4.3",
+    "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "7.0.0",
     "@babel/preset-typescript": "7.3.3",
-    "@lingui/cli": "2.7.4",
-    "@lingui/loader": "2.7.4",
-    "@lingui/macro": "2.7.4",
-    "@types/jest": "24.0.11",
-    "@types/node": "11.13.7",
-    "@typescript-eslint/eslint-plugin": "1.7.0",
-    "@typescript-eslint/parser": "1.7.0",
+    "@lingui/cli": "^2.8.3",
+    "@lingui/loader": "^2.8.3",
+    "@lingui/macro": "^2.8.3",
+    "@types/jest": "^24.0.14",
+    "@types/node": "^12.0.8",
+    "@typescript-eslint/eslint-plugin": "^1.10.2",
+    "@typescript-eslint/parser": "^1.10.2",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "10.0.1",
-    "babel-loader": "8.0.5",
+    "babel-loader": "^8.0.6",
     "babel-plugin-dynamic-import-node": "2.2.0",
-    "babel-plugin-macros": "2.5.1",
+    "babel-plugin-macros": "^2.6.1",
     "babel-plugin-styled-components": "1.10.0",
     "babel-plugin-syntax-class-properties": "6.13.0",
     "babel-plugin-transform-remove-console": "6.9.4",
-    "css-loader": "2.1.1",
-    "cypress": "3.2.0",
+    "css-loader": "^3.0.0",
+    "cypress": "3.3.1",
     "eslint": "5.16.0",
-    "eslint-config-prettier": "4.1.0",
+    "eslint-config-prettier": "^4.3.0",
     "eslint-config-standard": "12.0.0",
     "eslint-loader": "2.1.2",
-    "eslint-plugin-import": "2.17.2",
-    "eslint-plugin-node": "8.0.1",
-    "eslint-plugin-prettier": "3.0.1",
+    "eslint-plugin-import": "^2.17.3",
+    "eslint-plugin-node": "^9.1.0",
+    "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-promise": "4.1.1",
-    "eslint-plugin-react": "7.12.4",
+    "eslint-plugin-react": "^7.13.0",
     "eslint-plugin-standard": "4.0.0",
-    "file-loader": "3.0.1",
-    "fork-ts-checker-webpack-plugin": "1.2.0",
+    "file-loader": "^4.0.0",
+    "fork-ts-checker-webpack-plugin": "^1.3.7",
     "html-webpack-plugin": "3.2.0",
-    "jest": "24.7.1",
-    "jest-dom": "3.1.3",
-    "mini-css-extract-plugin": "0.6.0",
-    "pg-promise": "8.6.3",
-    "prettier": "1.17.0",
-    "react-testing-library": "6.1.2",
+    "jest": "^24.8.0",
+    "jest-dom": "^3.5.0",
+    "mini-css-extract-plugin": "^0.7.0",
+    "pg-promise": "^8.7.2",
+    "prettier": "^1.18.2",
+    "react-testing-library": "^8.0.1",
     "source-map-loader": "0.2.4",
     "style-loader": "0.23.1",
-    "typescript": "3.4.4",
+    "typescript": "^3.5.2",
     "webapp-webpack-plugin": "2.7.0",
-    "webpack": "4.30.0",
+    "webpack": "^4.34.0",
     "webpack-bundle-analyzer": "3.3.2",
-    "webpack-cli": "3.3.0",
-    "webpack-dev-server": "3.3.1",
+    "webpack-cli": "^3.3.4",
+    "webpack-dev-server": "^3.7.1",
     "webpack-pwa-manifest": "4.0.0",
-    "workbox-webpack-plugin": "4.3.0"
+    "workbox-webpack-plugin": "^4.3.1"
   }
 }
