--- a/graphql/package.json
+++ b/graphql/package.json
@@ -13,33 +13,33 @@
     "build:prod": "NODE_ENV=production babel -d ../build --ignore node_modules ."
   },
   "dependencies": {
-    "@babel/polyfill": "^7.0.0",
-    "@babel/runtime": "^7.0.0",
-    "koa": "~2.5.3",
+    "@babel/polyfill": "^7.4.4",
+    "@babel/runtime": "^7.4.5",
+    "koa": "^2.7.0",
     "koa-cache-control": "~2.0.0",
     "koa-proxy": "0.9.0",
     "koa-router": "^7.4.0",
-    "request-promise-native": "~1.0.5"
+    "request-promise-native": "^1.0.7"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0",
-    "@babel/core": "^7.0.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
-    "@babel/plugin-transform-runtime": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
-    "@babel/register": "^7.0.0",
-    "babel-eslint": "~9.0.0",
-    "chai": "~4.1.2",
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.5",
+    "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
+    "@babel/plugin-transform-runtime": "^7.4.4",
+    "@babel/preset-env": "^7.4.5",
+    "@babel/register": "^7.4.4",
+    "babel-eslint": "^10.0.1",
+    "chai": "^4.2.0",
     "chai-as-promised": "~7.1.1",
-    "eslint": "~5.5.0",
+    "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "~13.1.0",
-    "eslint-config-prettier": "~3.0.1",
-    "eslint-plugin-import": "~2.14.0",
-    "eslint-plugin-prettier": "~2.6.2",
-    "mocha": "^5.2.0",
-    "nodemon": "~1.18.4",
-    "prettier": "~1.14.2",
-    "pretty-quick": "^1.6.0"
+    "eslint-config-prettier": "^4.3.0",
+    "eslint-plugin-import": "^2.17.3",
+    "eslint-plugin-prettier": "^3.1.0",
+    "mocha": "^6.1.4",
+    "nodemon": "^1.19.1",
+    "prettier": "^1.18.2",
+    "pretty-quick": "^1.11.0"
   },
   "_flowComment": "NOTE: for flow add also flow-bin, flow-typed and babel-preset-flow"
 }
