--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "check-deps:root": "npm run _check-deps-script -- . ",
     "check-deps:admin": "npm run _check-deps-script -- admin ",
     "check-deps:client": "npm run _check-deps-script -- client ",
-    "check-deps:graphql": "npm run _check-deps-script -- client ",
+    "check-deps:graphql": "npm run _check-deps-script -- graphql ",
     "check-deps:server": "npm run _check-deps-script -- server ",
     "check-deps:worker": "npm run _check-deps-script -- worker ",
     "check-deps:www": "npm run _check-deps-script -- www ",
@@ -152,11 +152,11 @@
     "url": "git+https://github.com/TaitoUnited/server-template.git"
   },
   "devDependencies": {
-    "@commitlint/cli": "^7.5.2",
-    "@commitlint/config-conventional": "^7.5.0",
+    "@commitlint/cli": "^8.0.0",
+    "@commitlint/config-conventional": "^8.0.0",
     "git-branch-is": "^2.1.0",
-    "husky": "^1.3.1",
+    "husky": "^2.4.1",
     "npm-run-all": "~4.1.3",
-    "semantic-release": "^15.13.3"
+    "semantic-release": "^15.13.16"
   }
 }
