--- a/client/package.json
+++ b/client/package.json
@@ -61,6 +61,7 @@
     "@lingui/cli": "^2.8.3",
     "@lingui/loader": "^2.8.3",
     "@lingui/macro": "^2.8.3",
+    "@testing-library/react": "^8.0.1",
     "@types/jest": "^24.0.14",
     "@types/node": "^12.0.8",
     "@typescript-eslint/eslint-plugin": "^1.10.2",
@@ -93,7 +94,6 @@
     "mini-css-extract-plugin": "^0.7.0",
     "pg-promise": "^8.7.2",
     "prettier": "^1.18.2",
-    "react-testing-library": "^8.0.1",
     "source-map-loader": "0.2.4",
     "style-loader": "0.23.1",
     "typescript": "^3.5.2",
