chore: update npm libs

--- a/server/package.json
+++ b/server/package.json
@@ -51,12 +51,13 @@
     "@types/request": "^2.48.1",
     "@types/request-promise": "^4.1.44",
     "@types/showdown": "^1.9.3",
+    "@types/stack-trace": "0.0.29",
     "@types/uuid": "^3.4.4",
     "chai": "^4.2.0",
     "cheerio": "^1.0.0-rc.3",
     "mocha": "^6.1.4",
     "prettier": "^1.18.2",
-    "ts-node-dev": "^1.0.0-pre.32",
+    "ts-node-dev": "^1.0.0-pre.40",
     "tslint": "^5.17.0",
     "tslint-config-prettier": "^1.18.0",
     "tslint-no-unused-expression-chai": "^0.1.4",
