feat: alternate domain redirect

--- a/scripts/helm.yaml
+++ b/scripts/helm.yaml
@@ -24,6 +24,7 @@ full-stack:
     tls: true
     domains:
       - name: ${taito_domain}
+        altName: ${taito_altdomain}
 
   serviceDefaults:
     # Basics
